# data_science

./: .gitignore  .gitmodules  BerkeleyX.code-workspace  Probabilistic Graphical Models.ipynb  README.md  US voting and census.ipynb  epl_predictions.ipynb  markov clustering.ipynb
EPL/: README.md
FAISS/: 1-Flat.cpp  IndexFlat.h  Makefile
NN_cpp/: CMakeLists.txt  README.md  compile_and_run.sh
NN_cpp/data/: error.txt  generate_mnist.py  params.txt  plot_NN.py
NN_cpp/src/: HelperFunctions.h  Matrix.cpp  Matrix.h  ProgressBar.h  main  main.cpp  params.txt
NN_cpp/src/Network/: Network.cpp  Network.h
PGM/: README.md
algo_trading_fxcm/: fxcm.cfg  fxcm_intro.ipynb  model.py  timeseries_RNN_tensorflow.ipynb
expected_deg_sep/: Untitled.ipynb
finance_bet_size/: simulator.py
gradient_boosting/: README.md  learning gradient boosting from scratch.ipynb
graph_convolutional_network/: Untitled.ipynb
home_credit_default_risk/: README.md  Untitled.ipynb  home_credit_default_risk.ipynb  home_credit_default_risk.py  pom.xml  submission.csv  submission_xgboost.csv
linear_regression/: README.md  linear_regression.py
loan_prediction/: README.md  loan_prediction.ipynb  loand_prediction.ipynb  solution.csv  solution_loan_repayments.csv
markov_clustering/: README.md
metastore_db/: db.lck  service.properties
momentum_trading/: AI_PM.py  AI_PM_bot.py  algo.py  alpaca_connection.py  first_PM_system.py  trading_system.py
nyc_taxi_fare_prediction/: README.md  nyc_fares.ipynb  submission_lgb.csv
options_trading/: Untitled.ipynb  __init__.py  cheap_sbux_puts.csv  (+3 more)
(+44 files in other folders)
